--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -33,6 +33,7 @@ jobs:
         cache-version: 0
     - name: Generate Site
       run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+      working-directory: docs
       env:
         JEKYLL_ENV: production
     - name: Upload Artifacts
