--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -31,6 +31,7 @@ jobs:
         ruby-version: '3.2'
         bundler-cache: true
         cache-version: 0
+        working-directory: docs
     - name: Generate Site
       run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
       working-directory: docs
