--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,6 +39,11 @@ jobs:
         JEKYLL_ENV: production
     - name: Upload Artifacts
       uses: actions/upload-pages-artifact@v1
+      with:
+        working-directory: docs
     - name: Deploy to GitHub Pages
       id: deployment
       uses: actions/deploy-pages@v2
+      with:
+        working-directory: docs
+
