--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: Jekyll AsciiDoc Quickstart
+title: cdn.klib.io
 # uncomment baseurl if you want to publish the site to a subfolder
 #baseurl: /blog
-description: The Jekyll AsciiDoc Quickstart project is a leg-up in starting your own website hosted on GitHub with content based in AsciiDoc.
+description: oomph eclipse installer setups and p2 repositories 
 exclude:
 - LICENSE
 - README.adoc
