--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,8 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
+    - name: run test installations
+      run: oomph-console/setup-oomph-console.sh
     - name: Configure Pages
       id: pages
       uses: actions/configure-pages@v3
