--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,5 +1,5 @@
 # see https://github.com/actions/starter-workflows/blob/main/pages/jekyll.yml for reference
-name: Publish to GitHub Pages
+name: testing oomph setups/installations and publish to GitHub Pages
 on:
   push:
     branches: [main, master]
