--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,7 +32,7 @@ jobs:
     # update github pages
     - name: Configure Pages
       id: pages
-      uses: actions/configure-pages@v3
+      uses: actions/configure-pages@8747d8cd7632611ad6060b528f3e0f654c98869c
     - name: Install Ruby and Jekyll
       uses: ruby/setup-ruby@v1
       with:
