--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,16 +4,17 @@ name: validate & deploy to cdn.klib.io
 on:
   push:
     branches: [main, master]
-  # Allows you to run this workflow manually from the Actions tab
+  # allow manual workflow execution
   workflow_dispatch:
 concurrency:
   group: github-pages
   cancel-in-progress: false
-# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+
 permissions:
   contents: read
   pages: write
   id-token: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -23,30 +24,40 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v4
-    - name: Setup Maven
-      uses: stCarolas/setup-maven@v5
-      with:
-        maven-version: 3.9.6
+
+#    - name: Setup Maven
+#      uses: stCarolas/setup-maven@v5
+#      with:
+#        maven-version: 3.9.6
 #    - name: run test installations
 #      run: oomph-console/setup-oomph-console.sh
-    # update github pages
+
+    - name: Generate Directory Listings
+      uses: jayanta525/github-pages-directory-listing@v4.0.0
+      with:
+        FOLDER: '.'
+
     - name: Configure Pages
       id: pages
-      uses: actions/configure-pages@v3
+      uses: actions/configure-pages@v5
+
     - name: Install Ruby and Jekyll
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: '3.2'
         bundler-cache: true
         cache-version: 0
+
     - name: Generate Site
       run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
       env:
         JEKYLL_ENV: production
+
     - name: Upload Artifacts
       uses: actions/upload-pages-artifact@v3.0.1
+      with:
+        path: _site
+
     - name: Deploy to GitHub Pages
       id: deployment
-      uses: actions/deploy-pages@v2
-
-
+      uses: actions/deploy-pages@v4
