--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -39,7 +39,7 @@ jobs:
     - name: Generate Directory Listings
       uses: jayanta525/github-pages-directory-listing@v4.0.0
       with:
-        FOLDER: 'oomph'
+        FOLDER: '.'
     - name: "[Deploy] Delete existing directory listings"
       run: mv index.html index_list.html
       working-directory: .
