--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -32,19 +32,6 @@ jobs:
 #    - name: run test installations
 #      run: oomph-console/setup-oomph-console.sh
 
-# directory listings
-    - name: "[Deploy] Delete existing directory listings"
-      run: rm -rf **/index.html
-      working-directory: .
-    - name: Generate Directory Listings
-      uses: jayanta525/github-pages-directory-listing@v4.0.0
-      with:
-        FOLDER: '.'
-    - name: "[Deploy] Delete existing directory listings"
-      run: mv index.html index_list.html
-      working-directory: .
-
-# pages stuff
     - name: Configure Pages
       id: pages
       uses: actions/configure-pages@v5
@@ -60,6 +47,24 @@ jobs:
       run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
       env:
         JEKYLL_ENV: production
+
+    # addding directory listings
+    - name: "backup existing index.html"
+      run: mv index.html BAK_index.html
+      working-directory: _site
+    - name: "[Deploy] Delete existing directory listings"
+      run: rm -rf **/index.html
+      working-directory: _site
+    - name: Generate Directory Listings
+      uses: jayanta525/github-pages-directory-listing@v4.0.0
+      with:
+        FOLDER: '_site'
+    - name: "rename top-level directory listings"
+      run: mv index.html index_list.html
+      working-directory: _site
+    - name: "backup existing index.html"
+      run: mv index.html BAK_index.html
+      working-directory: _site
 
     - name: Upload Artifacts
       uses: actions/upload-pages-artifact@v3.0.1
