--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -50,24 +50,20 @@ jobs:
 
     # addding directory listings
     - name: "backup existing index.html"
-      run: |
-        env | sort
-        pwd
-        ls -laR
-        mv index.html BAK_index.html
+      run: mv index.html BAK_index.html
       working-directory: _site
-    - name: "[Deploy] Delete existing directory listings"
+    - name: "delete existing directory listings"
       run: rm -rf **/index.html
       working-directory: _site
     - name: Generate Directory Listings
       uses: jayanta525/github-pages-directory-listing@v4.0.0
       with:
         FOLDER: '_site'
-    - name: "rename top-level directory listings"
+    - name: "rename top-level directory listing"
       run: mv index.html index_list.html
       working-directory: _site
-    - name: "backup existing index.html"
-      run: mv index.html BAK_index.html
+    - name: "restore index.html from backup"
+      run: mv BAK_index.html index.html
       working-directory: _site
 
     - name: Upload Artifacts
